--- a/learning/src/index.css
+++ b/learning/src/index.css
@@ -1,14 +1,111 @@
-.sent {
-  background-color: aquamarine;
-  text-align: right;
-  padding-right: 5rem;
+.messages {
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  border-radius: 20px;
+  padding: 8px 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: inline-block;
 }
 
 .recieved {
-  background-color: azure;
-  text-align: left;
-  padding-left: 5rem;
+  align-items: flex-start;
 }
+
+.recieved .message {
+  margin-right: 25%;
+  background-color: #eeeeee;
+  position: relative;
+  color: black;
+}
+
+.recieved .message.last:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  left: -7px;
+  height: 20px;
+  width: 20px;
+  background: #eee;
+  border-bottom-right-radius: 15px;
+}
+.recieved .message.last:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+}
+
+.sent {
+  align-items: flex-end;
+}
+
+.sent .message {
+  color: white;
+  margin-left: 25%;
+  background-color: #393e46;
+  position: relative;
+}
+
+.sent .message.last:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  right: -8px;
+  height: 20px;
+  width: 20px;
+  background: linear-gradient(to bottom, #00d0ea 0%, #0085d1 100%);
+  background-attachment: fixed;
+  border-bottom-left-radius: 15px;
+}
+
+.sent .message.last:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+}
+
+.messagebox {
+  width: 100 !important;
+  max-width: 100%;
+}
+
 .chat-box {
-  background-color: gray;
+  overflow-y: scroll;
+  height: 80vh;
+}
+.align-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+body {
+  background-color: #222831;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.give-shadow {
+  box-shadow: 10px 10px 10px 10px #888888;
 }
